FIX: Layout issue with approx worth

--- a/css/enhancedsteam.css
+++ b/css/enhancedsteam.css
@@ -433,7 +433,7 @@ input[type=checkbox].es_dlc_selection:checked + label {
 }
 
 #es_cards_worth {
-	float: right;
+	float: none;
 	width: 280px;
 	text-align: center;
 	margin-right: 38px;
